fix bottom margins on small screens in portfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -3662,7 +3662,7 @@ input[type="button"].btn-block {
   box-shadow: 0 1px 0 rgba(0, 255, 0, 0.1);
   padding: 25px;
   border-radius: 3px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 @media only screen and (min-width: 768px) {
   .portfolio-inner {
