--- a/source/home.less
+++ b/source/home.less
@@ -240,7 +240,7 @@
   .shadow(0 1px 0 rgba(0, 255, 0, 0.1));
   padding: 25px;
   border-radius: 3px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
   @media @small {
     margin-bottom: 30px;
   }
